# rag-data-doctor

./: .editorconfig  .gitignore  .rag-data-doctor.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml
docs/: rule-template.py  writing-rules.md
examples/healthy-kb/: .rag-data-doctor.json
examples/healthy-kb/docs/: refund_policy.md  shipping_policy.md
examples/healthy-kb/evals/: refund_eval.json
examples/messy-kb/: .rag-data-doctor.json
examples/messy-kb/docs/: old_policy.md  refund_policy.md  tiny.md
examples/messy-kb/evals/: README.md
src/rag_data_doctor/: __init__.py  __main__.py  cli.py  context.py  models.py  scanner.py
src/rag_data_doctor/reporters/: console.py
src/rag_data_doctor/rules/: __init__.py  broken_citations.py  chunk_size.py  duplicate_chunks.py  empty_documents.py  metadata_completeness.py  retrieval_eval_coverage.py  sensitive_data.py  source_diversity.py  stale_documents.py
tests/: test_scanner.py
