[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-data-doctor"
version = "0.1.0"
description = "A production-readiness scanner for RAG knowledge bases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ravi Kiran Pagidi" }
]
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "data-quality",
  "llm",
  "genai",
  "vector-database",
  "knowledge-base",
  "observability",
  "python",
  "cli"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Indexing"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/rag-data-doctor"
Repository = "https://github.com/ravikiranpagidi/rag-data-doctor"
Issues = "https://github.com/ravikiranpagidi/rag-data-doctor/issues"

[project.scripts]
rag-data-doctor = "rag_data_doctor.cli:main"
rdd = "rag_data_doctor.cli:main"

